--- a/app/src/main/res/layout/activity_camera_test.xml
+++ b/app/src/main/res/layout/activity_camera_test.xml
@@ -9,7 +9,12 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
+    <RelativeLayout
+        android:id="@+id/fakeview"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
 
+        />
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
